src/styles.css
body {
  font-family: 'Poppins', sans-serif;
}

section {
  background-color: #1C1D25;
  color: white;
}

/* HERO PAGE */


.hero {
  background-color: #1C1D25;
  height: 100vh;
  color: white;
  font-size: 40px;
}

.logo {
  height: 85px;
  margin: 30px;
}

nav {
  display: flex;
  justify-content: space-between;
}


ul {
  display: flex;
  list-style-type: none;
  width: 500px;
  justify-content: space-around;
  font-size: 30px;
}


.hamburger {
  display: none;
}

@media only screen and (max-width: 1000px) {
  .hamburger {
    display: block;
    border: 0;
    background-color: transparent;
    color: white;
    font-size: 35px;
    margin: 25px;
    align-self: flex-end;
  }

  ul {
    display: none;
    background-color: #22232c;
    margin: 0px;
    align-items: inherit;
  }

  ul.show {
    display: block;
  }
    

  nav {
    display: flex;
    flex-direction: column-reverse;
    background-color: #22232c;
    overflow: hidden;
  }


  .logo {
    display: none;
  }
}

li {
  text-decoration: none;
}

li:hover {
  color: rgb(119, 201, 216)
}

h1 {
  font-size: 90px;
  margin: 0;
}

h2 {
  font-size: 50px;
  color: white;
}


p.title {
  margin: 0;
  font-size: 50px;
  font-weight: 300;
}

a {
  text-decoration: none;
  color: white;
}

a.hover-text-about:hover {
  filter: invert(0.5) sepia(1) hue-rotate(200deg) saturate(3);
    margin-left: 80px;
}

a.hover-text-projects:hover {
  filter: invert(0.5) sepia(1) hue-rotate(200deg) saturate(3);
}

a.hover-text-contact:hover {
  filter: invert(0.5) sepia(1) hue-rotate(200deg) saturate(3);
}

@media only screen and (max-width: 1000px) {
  #hero-area {
    display: flex;
    flex-wrap: wrap;
    overflow: hidden;
    justify-content: center;
  
  }

  #hero-text {
    /* margin-left: 80px; */
    margin-bottom: 25px;
  }

  #social-icons {
    display: inline-flex;
    flex-direction: row;
    gap: 20px;
  }

  /* #social-icons:hover::before {
    transform: scale(1.1);
    box-shadow: 0 0 15px pink;
  } */
}

.hero-area {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 100%;
}

.hero-text {
  margin-left: 80px;
  margin-bottom: 200px;
}

/* SOCIAL ICONS */


.socials {
  padding-bottom: 200px;
  margin: 20px;
}

.linkedin:hover {
  filter: invert(0.5) sepia(1) hue-rotate(200deg) saturate(4);
}

.github:hover {
  filter: invert(0.5) sepia(1) hue-rotate(200deg) saturate(4);
}

.email:hover {
  filter: invert(0.5) sepia(1) hue-rotate(200deg) saturate(4);
}

.resume:hover {
  filter: invert(0.5) sepia(1) hue-rotate(200deg) saturate(4);
}

/* BUTTON */

.button {
  width: 200px;
  height: 55px;
  border-radius: 35px;
  background-color: rgb(228, 104, 145);
  text-align: center;
  font-size: 30px;
  font-weight: 300;
  padding-top: 5px;
  margin-top: 20px;
  color: white;
}

.button:hover {
  background-color: rgb(255, 189, 89);
}

.button:active {
  background-color: #B5A9FF;
  color: #808080;
}


@media only screen and (max-width: 1000px) {
  #about-me {
    display: flex;
    flex-wrap: wrap;
  }
}

/* ABOUT ME */

.about {
  display: flex;
  justify-content: space-around;
  padding: 40px;
  text-align: center;

}

.personal-info {
  font-size: 30px;
  word-spacing: 8px;
}

.headshot {
  width: 350px;
  border-radius: 150px;
  /* padding-top: 50px; */
  margin: 10px;
}

.headshot-container {
  display: flex;
  align-items: center;
}

/* PROJECTS */

.projects {
  /* height: 300px; */
  display: flex;
  flex-direction: column;
  text-align: center;
  padding: 80px;
}


@media only screen and (max-width: 1000px) {
  .project-container {
    display: flex;
    flex-wrap: wrap;
    text-overflow: clip;
  }

  /* .project-descriptions {
    display: flex;
    flex-wrap: wrap;
  }

  .project-link {
    display: flex;
    flex-wrap: wrap;
  } */
}

.project-container {
  display: flex;
  justify-content: space-around;
}


.project-card {
  width: 450px;
  height: 500px;
  border-radius: 50px;
  margin: 15px;
}

.project-img {
  margin-top: 25px;
  width: 430px;
  height: 400px;
  object-fit: cover;
  border-radius: 25px;
}

.project-description {
  font-size: 15px;
  font-weight: 300;
}

.project-link {
  text-decoration: none;
  color: rgb(255, 189, 89);
}


@media only screen and (max-width: 1000px) {
  #contact{
    display: flex;
    flex-wrap: wrap;
  }
}

#contact {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-top: 100px;
  padding-bottom: 80px;
}


form {
  width: 400px;
  
}

.form-button {
  width: 150px;
  height: 45px;
  border-radius: 35px;
  background-color: rgb(228, 104, 145);
  text-align: center;
  font-size: 20px;
  font-weight: 300;
  padding-top: 5px;
  margin-top: 20px;
  color: white;
}

.form-button:hover {
  background-color: rgb(255, 189, 89);
  
}

.form-button:active {
  background-color: #B5A9FF;
  color: #808080;
}


.input-field {
  width: 375px;
  height: 50px;
  margin-top: 20px;
  padding-left: 10px;
  padding-right: 10px;
  border: 1px solid #777;
  border-radius: 15px;
  outline: none;
}

.textarea-field {
  width: 400px;
  height: 150px;
  margin-top: 20px;
  padding-top: 10px;
  border-radius: 15px;
}

